fix: O(1)